erDiagram
	assets }o--|| asset_type : references
	value }o--|| assets : references
	specs ||--o{ value : references
	asset_type ||--o{ specs : references
	users ||--|| assets : references
	group ||--|| users : references
	log_admin }o--|| users : references
	log_admin }o--|| users : references
	log }o--|| assets : references
	log_mission }o--|| mission : references
	assets }o--|| mission : references
	mission }o--|| users : references
	room ||--o{ assets : references
	base ||--o{ room : references

	assets {
		INTEGER id
		INTEGER added_by_id
		TINYINT type_asset_id
		INTEGER mission_id
		INTEGER room_id
		DATETIME DA
		DATETIME DE
		TEXT nom
		TEXT number
		TEXT(65535) status
		BOOLEAN exists
		TEXT(65535) shelf
	}

	asset_type {
		TINYINT id
		TEXT type
	}

	specs {
		INTEGER id
		TINYINT type_id
		TEXT name
	}

	value {
		INTEGER id
		INTEGER asset_id
		INTEGER spec_id
		DATETIME DA
		DATETIME DE
		TEXT value
	}

	users {
		INTEGER id
		TINYINT group_id
		DATETIME DA
		DATETIME DE
		BOOLEAN active
		TEXT username
		TEXT name
		TEXT hash
		TEXT hash_algorithm
		TEXT MFA
	}

	group {
		TINYINT id
		TEXT name
		TEXT desc
		TEXT perms
	}

	log_admin {
		INTEGER id
		INTEGER admin_id
		INTEGER user_id
		DATETIME D
		TEXT action
		TEXT desc
	}

	log {
		INTEGER id
		INTEGER asset_id
		DATETIME D
		TEXT action
		TEXT(65535) old_value
	}

	mission {
		INTEGER id
		INTEGER created_by_id
		DATETIME DA
		DATETIME DE
		DATETIME date_start
		DATETIME date_end
		TEXT(65535) title
		TEXT(65535) desc
		TEXT(65535) status
		TEXT(65535) theatre
	}

	log_mission {
		INTEGER id
		INTEGER mission_id
		DATETIME D
		TEXT(65535) action
		TEXT(65535) old_value
	}

	room {
		INTEGER id
		INTEGER building
		TEXT(65535) room
	}

	base {
		INTEGER id
		TEXT(65535) name
		TEXT(65535) address
	}